# ai_interviewer

./: .gitignore  PHASE1_SUMMARY.md  QUICKSTART.md  README.md  config.yaml  example_usage.py  main.py  pyproject.toml  requirements.txt  setup.py
app/: __init__.py  config.py  main.py
app/agents/: interviewer_agent.py
app/api/v1/: health.py  interviews.py
app/core/: prompts.py  state_manager.py
app/models/: schemas.py
app/services/: gemini_service.py
docs/: DOCUMENTATION.md  QUICKSTART.md
src/: __init__.py  interviewer.py  main.py
tests/: test_interviewer.py
